--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -9,7 +9,7 @@
         android:id="@+id/mpsback"
         android:layout_width="0dp"
         android:layout_height="70dp"
-        android:background="@color/yellow"
+        android:background="@color/light_blue"
         android:padding="16dp"
         android:src="@drawable/ic_arrow_back"
         app:layout_constraintBottom_toBottomOf="@id/ps_bar"
@@ -23,7 +23,7 @@
         android:id="@+id/ps_bar"
         android:layout_width="0dp"
         android:layout_height="70dp"
-        android:background="@color/yellow"
+        android:background="@color/light_blue"
         android:ellipsize="marquee"
         android:gravity="center_vertical"
         android:maxLines="1"
