--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -56,7 +56,7 @@
         tools:layout="@layout/fragment_search" />
     <fragment
         android:id="@+id/settingsFragment"
-        android:name="com.example.foodplannerapplication.features.Scan.view.SettingsFragment"
+        android:name="com.example.foodplannerapplication.features.Scan.view.ScanFragment"
         android:label="@string/settings"
         tools:layout="@layout/fragment_settings" />
     <fragment
